// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolve-readmodel-mongo method "drop" 1`] = `
Array [
  Array [
    "connect",
    "mongodb://127.0.0.1:27017/MyDatabaseName",
    Object {
      "autoReconnect": false,
      "useNewUrlParser": true,
    },
  ],
  Array [
    "createCollection",
    "table1",
  ],
  Array [
    "createIndex",
    Object {
      "id": 1,
    },
    Object {
      "unique": true,
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
      "id": "5265736f6c7665526f6f7400",
      "readModelName": "readModelName1",
      "test": 0,
    },
  ],
  Array [
    "collection",
    "table1",
  ],
  Array [
    "collection",
    "table1",
  ],
  Array [
    "findOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
  ],
  Array [
    "insertOne",
    Object {
      "id": "id-1",
      "test": true,
    },
  ],
  Array [
    "collection",
    "table1",
  ],
  Array [
    "insertOne",
    Object {
      "id": "id-2",
      "test": true,
    },
  ],
  Array [
    "createCollection",
    "table2",
  ],
  Array [
    "createIndex",
    Object {
      "id": 1,
    },
    Object {
      "unique": true,
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
      "id": "5265736f6c7665526f6f7400",
      "readModelName": "readModelName2",
      "test": 0,
    },
  ],
  Array [
    "collection",
    "table2",
  ],
  Array [
    "collection",
    "table2",
  ],
  Array [
    "findOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
  ],
  Array [
    "insertOne",
    Object {
      "id": "id-3",
      "test": true,
    },
  ],
  Array [
    "collection",
    "table2",
  ],
  Array [
    "insertOne",
    Object {
      "id": "id-4",
      "test": true,
    },
  ],
  Array [
    "collection",
    "table2",
  ],
  Array [
    "insertOne",
    Object {
      "id": "id-5",
      "test": true,
    },
  ],
  Array [
    "collection",
    "table1",
  ],
  Array [
    "countDocuments",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {},
      ],
    },
  ],
  Array [
    "collection",
    "table2",
  ],
  Array [
    "countDocuments",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {},
      ],
    },
  ],
  Array [
    "collections",
  ],
  Array [
    "collections",
  ],
  Array [
    "disconnect",
  ],
]
`;

exports[`resolve-readmodel-mongo methods "defineTable", "insert", "find", "findOne" 1`] = `
Array [
  Array [
    "connect",
    "mongodb://127.0.0.1:27017/MyDatabaseName",
    Object {
      "autoReconnect": false,
      "useNewUrlParser": true,
    },
  ],
  Array [
    "createCollection",
    "Entries",
  ],
  Array [
    "createIndex",
    Object {
      "id": 1,
    },
    Object {
      "unique": true,
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
      "id": "5265736f6c7665526f6f7400",
      "name": 0,
      "readModelName": "readModelName",
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "findOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
  ],
  Array [
    "insertOne",
    Object {
      "id": "id-1",
      "name": "First entry",
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "insertOne",
    Object {
      "id": "id-2",
      "name": "Second entry",
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "insertOne",
    Object {
      "id": "id-3",
      "name": "Second entry",
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "insertOne",
    Object {
      "id": "id-4",
      "name": "First entry",
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "insertOne",
    Object {
      "id": "id-5",
      "name": "Second entry",
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {},
      ],
    },
    Object {
      "projection": Object {
        "_id": 0,
      },
      "sort": Object {
        "id": 1,
      },
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {},
      ],
    },
    Object {
      "projection": Object {
        "_id": 0,
      },
      "sort": Object {
        "id": -1,
      },
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "findOne",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {
          "id": Object {
            "$eq": "id-3",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "projection": Object {
        "_id": 0,
      },
    },
  ],
  Array [
    "collection",
    "Entries",
  ],
  Array [
    "find",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "_id": Object {
                    "$ne": 0,
                  },
                },
                Object {
                  "$and": Array [
                    Object {
                      "$and": Array [
                        Object {
                          "_id": Object {
                            "$ne": 0,
                          },
                        },
                        Object {
                          "id": Object {
                            "$eq": "id-2",
                            "$type": "string",
                          },
                          "name": Object {
                            "$eq": "Second entry",
                            "$type": "string",
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            Object {
              "$and": Array [
                Object {
                  "_id": Object {
                    "$ne": 1,
                  },
                },
                Object {
                  "$not": Object {
                    "$and": Array [
                      Object {
                        "_id": Object {
                          "$ne": undefined,
                        },
                      },
                      Object {
                        "id": Object {
                          "$gte": "id-1",
                          "$type": "string",
                        },
                      },
                    ],
                  },
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "projection": Object {
        "_id": 0,
      },
    },
  ],
]
`;

exports[`resolve-readmodel-mongo methods "defineTable", "insert", "update", "count", "delete" 1`] = `
Array [
  Array [
    "connect",
    "mongodb://127.0.0.1:27017/MyDatabaseName",
    Object {
      "autoReconnect": false,
      "useNewUrlParser": true,
    },
  ],
  Array [
    "createCollection",
    "ShoppingLists",
  ],
  Array [
    "createIndex",
    Object {
      "id": 1,
    },
    Object {
      "unique": true,
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
      "createdAt": 0,
      "id": "5265736f6c7665526f6f7400",
      "name": 0,
      "readModelName": "readModelName",
    },
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "findOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
  ],
  Array [
    "insertOne",
    Object {
      "createdAt": 1,
      "id": "id-1",
      "name": "Products",
    },
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "insertOne",
    Object {
      "createdAt": 2,
      "id": "id-2",
      "name": "Medicines",
    },
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$set": Object {
        "name": "Products-NEW",
      },
    },
    Object {
      "upsert": false,
    },
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$set": Object {
        "name": "Products-NEW",
      },
    },
    Object {
      "upsert": true,
    },
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "deleteMany",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {
          "id": Object {
            "$eq": "id-2",
            "$type": "string",
          },
        },
      ],
    },
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {
          "id": Object {
            "$eq": "id-3",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$set": Object {
        "name": "Entries",
      },
    },
    Object {
      "upsert": true,
    },
  ],
  Array [
    "collection",
    "ShoppingLists",
  ],
  Array [
    "countDocuments",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {},
      ],
    },
  ],
]
`;

exports[`resolve-readmodel-mongo operator "$inc" 1`] = `
Array [
  Array [
    "connect",
    "mongodb://127.0.0.1:27017/MyDatabaseName",
    Object {
      "autoReconnect": false,
      "useNewUrlParser": true,
    },
  ],
  Array [
    "createCollection",
    "values",
  ],
  Array [
    "createIndex",
    Object {
      "id": 1,
    },
    Object {
      "unique": true,
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
      "arr": 0,
      "id": "5265736f6c7665526f6f7400",
      "obj": 0,
      "readModelName": "readModelName",
      "value": 0,
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "findOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
  ],
  Array [
    "insertOne",
    Object {
      "arr": Array [
        Object {
          "value": 1,
        },
      ],
      "id": "id-1",
      "obj": Object {
        "value": 1,
      },
      "value": 1,
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$inc": Object {
        "arr.0.value": 1,
        "obj.value": 1,
        "value": 1,
      },
      "$set": Object {},
    },
    Object {
      "upsert": false,
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$inc": Object {
        "arr.0.value": -1,
        "obj.value": -1,
        "value": -1,
      },
      "$set": Object {},
    },
    Object {
      "upsert": false,
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$inc": Object {
        "arr.0.value": 0.42,
        "obj.value": 0.42,
        "value": 0.42,
      },
      "$set": Object {},
    },
    Object {
      "upsert": false,
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$inc": Object {
        "arr.0.value": -0.42,
        "obj.value": -0.42,
        "value": -0.42,
      },
      "$set": Object {},
    },
    Object {
      "upsert": false,
    },
  ],
]
`;

exports[`resolve-readmodel-mongo operator "$set" 1`] = `
Array [
  Array [
    "connect",
    "mongodb://127.0.0.1:27017/MyDatabaseName",
    Object {
      "autoReconnect": false,
      "useNewUrlParser": true,
    },
  ],
  Array [
    "createCollection",
    "values",
  ],
  Array [
    "createIndex",
    Object {
      "id": 1,
    },
    Object {
      "unique": true,
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
      "arr": 0,
      "id": "5265736f6c7665526f6f7400",
      "obj": 0,
      "readModelName": "readModelName",
      "value": 0,
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "findOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
  ],
  Array [
    "insertOne",
    Object {
      "arr": Array [
        Object {
          "value": 1,
        },
      ],
      "id": "id-1",
      "obj": Object {
        "value": 1,
      },
      "value": 1,
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$set": Object {
        "arr.0.value": 2,
        "obj.value": 2,
        "value": 2,
      },
    },
    Object {
      "upsert": false,
    },
  ],
]
`;

exports[`resolve-readmodel-mongo operator "$unset" 1`] = `
Array [
  Array [
    "connect",
    "mongodb://127.0.0.1:27017/MyDatabaseName",
    Object {
      "autoReconnect": false,
      "useNewUrlParser": true,
    },
  ],
  Array [
    "createCollection",
    "values",
  ],
  Array [
    "createIndex",
    Object {
      "id": 1,
    },
    Object {
      "unique": true,
    },
  ],
  Array [
    "insertOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
      "arr": 0,
      "id": "5265736f6c7665526f6f7400",
      "obj": 0,
      "readModelName": "readModelName",
      "value": 0,
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "findOne",
    Object {
      "_id": "5265736f6c7665526f6f7400",
    },
  ],
  Array [
    "insertOne",
    Object {
      "arr": Array [
        Object {
          "value": 1,
        },
      ],
      "id": "id-1",
      "obj": Object {
        "value": 1,
      },
      "value": 1,
    },
  ],
  Array [
    "collection",
    "values",
  ],
  Array [
    "updateMany",
    Object {
      "$and": Array [
        Object {
          "_id": Object {
            "$ne": "5265736f6c7665526f6f7400",
          },
        },
        Object {
          "id": Object {
            "$eq": "id-1",
            "$type": "string",
          },
        },
      ],
    },
    Object {
      "$set": Object {
        "arr.0.value": null,
        "obj.value": null,
        "value": null,
      },
    },
    Object {
      "upsert": false,
    },
  ],
]
`;
